01 July 2017: remove cobertura